--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,33 +28,37 @@ crab-redirect-primitives = { path = "primitives" }
 crab-redirect-runtime    = { path = "runtime" }
 
 # Substrate dependencies
-sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-chain-spec       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-cli              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-executor         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-rpc              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-service          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-telemetry        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-tracing          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-api              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-block-builder    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-consensus        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-core             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-inherents        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-timestamp        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-trie             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-basic-authorship           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-chain-spec                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-cli                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-client-api                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-executor                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-network                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-rpc                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-service                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-telemetry                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-tracing                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-api                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-block-builder              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-core                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-inherents                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-runtime                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-timestamp                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 
 # RPC related dependencies
 jsonrpc-core = { version = "15.1.0" }
 
 # Cumulus dependencies
-cumulus-client-cli                   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-network               = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-client-service               = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
-cumulus-primitives-core              = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-cli              = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-consensus-aura   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-network          = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-service          = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-primitives-core         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 
 # Polkadot dependencies
 polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
