--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ path = "src/main.rs"
 
 [dependencies]
 # Crates
-array-bytes = { version = "1.1.0" }
-codec       = { package = "parity-scale-codec", version = "2.0.1" }
+array-bytes = { version = "1.3.3" }
+codec       = { package = "parity-scale-codec", version = "2.1.1" }
 log         = { version = "0.4.14" }
-serde       = { version = "1.0.124", features = ["derive"] }
+serde       = { version = "1.0.126", features = ["derive"] }
 structopt   = { version = "0.3.21" }
 tempfile    = { version = "3.2.0" }
 
@@ -49,6 +49,7 @@ sp-inherents                  = { git = "https://github.com/paritytech/substrate
 sp-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-offchain                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-runtime                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-session                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-timestamp                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
