--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -12,7 +12,8 @@ version     = "2.0.0"
 
 [dependencies]
 # crates.io
-codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
+codec    = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
+smallvec = { version = "1.6.1" }
 # cumulus
 cumulus-pallet-aura-ext         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-pallet-dmp-queue        = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
