--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license     = "GPL-3.0"
 name        = "crab-redirect"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-common/"
-version     = "2.0.0"
+version     = "3.0.0"
 
 [[bin]]
 name = "crab-redirect-collator"
@@ -17,7 +17,9 @@ path = "src/main.rs"
 [dependencies]
 # Crates
 array-bytes = { version = "1.3.3" }
+async-trait = { version = "0.1.50" }
 codec       = { package = "parity-scale-codec", version = "2.1.1" }
+futures     = { version = "0.3.15" }
 log         = { version = "0.4.14" }
 serde       = { version = "1.0.126", features = ["derive"] }
 structopt   = { version = "0.3.21" }
@@ -61,6 +63,7 @@ jsonrpc-core = { version = "15.1.0" }
 cumulus-client-cli                    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-client-consensus-aura         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-client-consensus-common       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-consensus-relay-chain  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-client-network                = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-client-service                = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-primitives-core               = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
